Fix taint/close race Add benchmark